<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/paddingSmall">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/paddingSmall"
        android:text="@string/chat_settings_title"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/subMenuTextSize"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_text_size_settings"
        android:textSize="@dimen/smallTextSize" />

    <RadioGroup
        android:id="@+id/radioTextSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/paddingSmall">

        <RadioButton
            android:id="@+id/textSizeSmallRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/textSizeSmall" />

        <RadioButton
            android:id="@+id/textSizeNormalRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/textSizeNormal" />

        <RadioButton
            android:id="@+id/textSizeLargeRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/textSizeLarge" />
    </RadioGroup>

</LinearLayout>