<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/baseline_favorite_24"
        android:orderInCategory="1"
        android:title="@string/popup_window_favorites"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_all_messages"
        android:icon="@drawable/baseline_message_24"
        android:title="@string/action_all_messages"
        app:showAsAction="never"
        android:visible="false"/>

</menu>